--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,11 @@ whitening/Figures*
 *.pyc
 SAILnet/.DS_Store
 .DS_Store
+SAILnet/pca/.DS_Store
+SAILnet/pca/.DS_Store
+SAILnet/pca/.DS_Store
+SAILnet/pca_object_44
+SAILnet/whitened_44.npz
+SAILnet/pca/.DS_Store
+SAILnet/pca/.DS_Store
+SAILnet/pca/.DS_Store
